tests/fixtures/invalid-only/non-compliant-first.php
<?php

/**
 * Non-compliant fixture without required header comment.
 */
declare(strict_types=1);
